Add footer and place max-width container around primary elements

--- a/sandbox.html
+++ b/sandbox.html
@@ -1,118 +1,106 @@
-<div class="container-tabset">
-    <h2>Media Resources</h2>
-    <section class="tabset tabset-media">
+<footer class="component footer">
+    <div class="container">
         <div class="row">
-            <div class="col-md-1">
-                <ul class="nav nav-tabs left-tabs sideways-tabs">
-                    <li class="nav-item">
-                        <a class="nav-link active show" href="#lorem-sleft" data-toggle="tab">Podcasts</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#ipsum-sleft" data-toggle="tab">Videos</a>
-                    </li>
-                </ul>
+            <div class="col-md-3">
+                <h3 class="heading heading--s">
+                    Useful Links
+                </h3>
+                <div class="collapse" id="collapse-footer-1">
+                    <ul class="footer__links">
+                        <li><a href="https://www.supportstjames.ie/" class="" target="">Make a donation</a></li>
+                        <li><a href="/patients/payyourbill/" class="" target="">Pay your bill</a></li>
+                        <li><a href="/covid19/" class="" target="">COVID-19</a></li>
+                        <li><a href="/aboutus/news/" class="" target="">Latest news</a></li>
+                    </ul>
+                </div>
             </div>
-
-            <div class="col-md-11">
-                <div class="container">
-                    <div class="tab-content">
-                        <article class="tab-pane container active show" id="lorem-sleft">
-                            <h3><i class="fas fa-headphones"></i></h3>
-                            <ul>
-                                <li>
-                                    <a href="">
-                                        <div class="img-wrapper flex-centre"><img src="static/images/logos/logo-mpc.png" alt="ModPath Chat logo"></div>
-                                        <div class="text-wrapper">
-                                            <p>The official podcast of <cite>Modern Pathology</cite>, the journal of the US and Canadian Academy of Pathology (USCAP), ModPath Chat features interviews with authors, opinion leaders and experts on the latest
-                                                science, technology, and developments in the field of pathology. The monthly series is hosted by Dr. George J. Netto, the Editor-in-Chief of
-                                                <cite>Modern Pathology</cite> and the Chair of Pathology at the University of Alabama in Birmingham.
-                                            </p>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <div class="img-wrapper flex-centre"><img src="static/images/logos/logo-cap.jpg" alt="CAP logo"></div>
-                                        <div class="text-wrapper">
-                                            <p>The College of American Pathologists' CAPcasts feature interviews with leading pathologists on current issues impacting pathology and laboratory medicine. CAP is the leading organization of board-certified pathologists,
-                                                serving patients, pathologists and the public by fostering and advocating excellence in the practice of pathology and laboratory medicine worldwide.</p>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <div class="img-wrapper flex-centre"><img src="static/images/logos/logo-dpp.png" alt="Digital Pathology Place logo"></div>
-                                        <div class="text-wrapper">
-                                            <p>Aleksandra Zuraw discusses digital pathology, from the basic concepts to the newest developments, including image analysis and artificial intelligence. She also reviews scientific literature and - together with
-                                                her guests - explores the latest industry and research digital pathology trends.
-                                            </p>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <div class="img-wrapper flex-centre"><img src="static/images/logos/logo-dl.png" alt="Deeper Levels logo"></div>
-                                        <div class="text-wrapper">
-                                            <p>A podcast about pathology, medicine, and science hosted by Natalie Banet, MD, a practicing Gynecologic and Cytopathologist and Assistant Professor of Pathology and Laboratory Medicine at the Warren Alpert Medical
-                                                School of Brown University.</p>
-                                        </div>
-                                    </a>
-                                </li>
-                            </ul>
-                        </article>
-                        <article class="tab-pane container" id="ipsum-sleft">
-                            <h3><i class="fab fa-youtube"></i></h3>
-                            <ul>
-                                <li>
-                                    <a href="">
-                                        <div class="media-wrapper"><iframe width="340" height="185" src="https://www.youtube.com/embed/49J2Fy5ibRY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                                allowfullscreen></iframe></div>
-                                        <div class="text-wrapper">
-                                            <h4>Washington University in St. Louis Nephrology Web Series</h4>
-                                            <p>Realtime discussion of renal pathology cases by a nephrology fellow and renal pathologist from the University of Washington. Episodes include guided reviews of the histology and special stains, relevant differential
-                                                diagnosis and final diagnosis.</p>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <div class="media-wrapper"><iframe width="340" height="185" src="https://www.youtube.com/embed/m097UUkqU2Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                                allowfullscreen></iframe></div>
-                                        <div class="text-wrapper">
-                                            <h4>Medical School Pathology</h4>
-                                            <p>Video lecture series from Dr. John Minarcik covering all the major topics in the <cite>Robbins Pathology</cite> textbooks, as well as numerous virtual microscopy histopathology labs. Dr. Minarcik also runs a
-                                                free online medical school pathology course that can be accessed here.</p>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <div class="media-wrapper"><iframe width="340" height="185" src="https://www.youtube.com/embed/yQQ2Dmz42Vs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                                allowfullscreen></iframe></div>
-                                        <div class="text-wrapper">
-                                            <h4>Jerad Gardner, MD</h4>
-                                            <p>Pennsylvania-based Dr. Gardner, who is also a deputy Editor-in-Chief of
-                                                <cite>Archives of Pathology & Laboratory Medicine</cite>, leads regular comprehensive microscopic sessions on dermatopathology and soft tissue pathology.
-                                            </p>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <div class="media-wrapper"><iframe width="340" height="185" src="https://www.youtube.com/embed/UvvXrh1vQfA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                                allowfullscreen></iframe></div>
-                                        <div class="text-wrapper">
-                                            <h4>pathCast</h4>
-                                            <p>Lecture series covering various aspects of pathology, including challenging topics and updates to disease classifications. Each one-hour session is streamed live and available for free, on-demand viewing.
-                                            </p>
-                                        </div>
-                                    </a>
-                                </li>
-                            </ul>
-                        </article>
-                    </div>
+            <div class="col-md-3">
+                <h3 class="heading heading--s">
+                    Patients
+                </h3>
+                <div class="collapse" id="collapse-footer-2">
+                    <ul class="footer__links">
+                        <li><a href="/patients/bloodtesting/" class="" target="">Blood Testing</a></li>
+                        <li><a href="/aboutus/gettingtothehospital/" class="" target="">Getting to the hospital</a></li>
+                        <li><a href="/patients/parking/" class="" target="">Parking</a></li>
+                        <li><a href="/patients/" class="" target="">Appointment information</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <h3 class="heading heading--s">
+                    Visitors
+                </h3>
+                <div class="collapse" id="collapse-footer-3">
+                    <ul class="footer__links">
+                        <li><a href="/patients/visiting/" class="" target="">Visiting</a></li>
+                        <li><a href="/wards/" class="" target="">Wards</a></li>
+                        <li><a href="/patients/shopsfacilities/" class="" target="">Shops &amp;&nbsp;Facilites</a></li>
+                        <li><a href="/services/" class="" target="">Departments</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <h3 class="heading heading--s">
+                    Healthcare Professionals
+                </h3>
+                <div class="collapse" id="collapse-footer-4">
+                    <ul class="footer__links">
+                        <li><a href="/research/" class="" target="">Research</a></li>
+                        <li><a href="http://search.stjames.ie/Labmed/" class="" target="">LabMed User Guide</a></li>
+                        <li><a href="/services/laboratorymedicinelabmed/" class="" target="">LabMed Services</a></li>
+                        <li><a href="/healthcareprofessionals/newslettersnews/" class="" target="">Newsletters</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
-    </section>
-</div>
+        <div class="row footer__bottom">
+            <div class="col-sm-6 col-md-6 col-lg-3">
+                <p><strong>St James's Hospital</strong><br>James Street<br>Dublin 8<br>Ireland&nbsp;<br>D08 NHY1</p>
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <ul class="contact-info footer__links">
+                    <li><a href="tel:+35314103000" class="contact-info__link contact-info__phone"><span>Phone</span>&nbsp;(01) 410
+                            3000</a><br><br></li>
+                    <li>Registered Charity Number: 20017583</li>
+                </ul>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-3 footer__social">
+                <div class="container">
+                    <ul class="nav nav-social">
+                        <li class="list-item-social">
+                            <a href="http://" target="_blank" class="flex-centre"><i class="fab fa-twitter"></i></a>
+                        </li>
+                        <li class="list-item-social">
+                            <a href="http://" target="_blank" class="flex-centre"><i class="fab fa-facebook-f"></i></a>
+                        </li>
+                        <li class="list-item-social">
+                            <a href="http://" target="_blank" class="flex-centre"><i class="fab fa-linkedin-in"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- <ul class="social-links">
+                    <li><a class="social-links__link social-links__twitter" href="https://twitter.com/stjamesdublin" target="_blank">Twitter</a></li>
+                    <li><a class="social-links__link social-links__facebook" href="https://www.facebook.com/StJamessHospitalDublin" target="_blank">Facebook</a></li>
+                    <li><a class="social-links__link social-links__linkedin" href="https://www.linkedin.com/company/stjamesshospitaldublin" target="_blank">Linkedin</a>
+                    </li>
+                </ul> -->
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-12 footer__info">
+                <p><a href="https://www.tcd.ie/" target="_blank">Trinity College Dublin</a> is the academic partner of St James's Hospital</p>
+                <div class="logos">
+                    <img src="/media/trinity_Main_Logo.png" alt="Trinity College Dublin">
+                    <img src="static/images/logos/logo-smoke-free.svg" alt="SJH Smoke-free campus logo">
+                    <img src="/media/SmartD8-Logo-Colour.png" class="logos__padding" alt="Smart D8">
+                </div>
+                <ul class="footer__links-inline">
+                    <li>©2021 St James's Hospital. All rights reserved.</li>
+                    <li><a href="/contactus/" class="" target="">Contact us</a></li>
+                    <li><a href="/aboutus/disclaimer/" class="" target="">Disclaimer</a></li>
+                    <li><a href="/aboutus/privacynotice/" class="" target="">Privacy notice</a></li>
+                    <li><a href="/aboutus/accessibility/" class="" target="">Accessibility</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
