Dynamically set height of Twitter client based on main height

--- a/sandbox.html
+++ b/sandbox.html
@@ -1,5 +1,5 @@
 <footer class="component footer">
-    <div class="container">
+    <div class="container width-max">
         <div class="row">
             <div class="col-md-3">
                 <h3 class="heading heading--s">
@@ -7,10 +7,10 @@
                 </h3>
                 <div class="collapse" id="collapse-footer-1">
                     <ul class="footer__links">
-                        <li><a href="https://www.supportstjames.ie/" class="" target="">Make a donation</a></li>
-                        <li><a href="/patients/payyourbill/" class="" target="">Pay your bill</a></li>
-                        <li><a href="/covid19/" class="" target="">COVID-19</a></li>
-                        <li><a href="/aboutus/news/" class="" target="">Latest news</a></li>
+                        <li><a href="https://www.supportstjames.ie/">Make a donation</a></li>
+                        <li><a href="https://www.stjames.ie/patients/payyourbill/">Pay your bill</a></li>
+                        <li><a href="https://www.stjames.ie/covid19/">COVID-19</a></li>
+                        <li><a href="https://www.stjames.ie/aboutus/news/">Latest news</a></li>
                     </ul>
                 </div>
             </div>
@@ -20,10 +20,11 @@
                 </h3>
                 <div class="collapse" id="collapse-footer-2">
                     <ul class="footer__links">
-                        <li><a href="/patients/bloodtesting/" class="" target="">Blood Testing</a></li>
-                        <li><a href="/aboutus/gettingtothehospital/" class="" target="">Getting to the hospital</a></li>
-                        <li><a href="/patients/parking/" class="" target="">Parking</a></li>
-                        <li><a href="/patients/" class="" target="">Appointment information</a></li>
+                        <li><a href="https://www.stjames.ie/patients/bloodtesting/">Blood Testing</a></li>
+                        <li><a href="https://www.stjames.ie/aboutus/gettingtothehospital/">Getting to the hospital</a>
+                        </li>
+                        <li><a href="https://www.stjames.ie/patients/parking/">Parking</a></li>
+                        <li><a href="https://www.stjames.ie/patients/">Appointment information</a></li>
                     </ul>
                 </div>
             </div>
@@ -33,10 +34,11 @@
                 </h3>
                 <div class="collapse" id="collapse-footer-3">
                     <ul class="footer__links">
-                        <li><a href="/patients/visiting/" class="" target="">Visiting</a></li>
-                        <li><a href="/wards/" class="" target="">Wards</a></li>
-                        <li><a href="/patients/shopsfacilities/" class="" target="">Shops &amp;&nbsp;Facilites</a></li>
-                        <li><a href="/services/" class="" target="">Departments</a></li>
+                        <li><a href="https://www.stjames.ie/patients/visiting/">Visiting</a></li>
+                        <li><a href="https://www.stjames.ie/wards/">Wards</a></li>
+                        <li><a href="https://www.stjames.ie/patients/shopsfacilities/">Shops &amp;&nbsp;Facilites</a>
+                        </li>
+                        <li><a href="https://www.stjames.ie/services/">Departments</a></li>
                     </ul>
                 </div>
             </div>
@@ -46,10 +48,11 @@
                 </h3>
                 <div class="collapse" id="collapse-footer-4">
                     <ul class="footer__links">
-                        <li><a href="/research/" class="" target="">Research</a></li>
-                        <li><a href="http://search.stjames.ie/Labmed/" class="" target="">LabMed User Guide</a></li>
-                        <li><a href="/services/laboratorymedicinelabmed/" class="" target="">LabMed Services</a></li>
-                        <li><a href="/healthcareprofessionals/newslettersnews/" class="" target="">Newsletters</a></li>
+                        <li><a href="https://www.stjames.ie/research/">Research</a></li>
+                        <li><a href="http://search.stjames.ie/Labmed/">LabMed User Guide</a></li>
+                        <li><a href="https://www.stjames.ie/services/laboratorymedicinelabmed/">LabMed Services</a></li>
+                        <li><a href="https://www.stjames.ie/healthcareprofessionals/newslettersnews/">Newsletters</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -69,36 +72,35 @@
                 <div class="container">
                     <ul class="nav nav-social">
                         <li class="list-item-social">
-                            <a href="http://" target="_blank" class="flex-centre"><i class="fab fa-twitter"></i></a>
+                            <a href="https://www.linkedin.com/" target="_blank" class="flex-centre"><i
+                                    class="fab fa-linkedin-in"></i></a>
                         </li>
                         <li class="list-item-social">
-                            <a href="http://" target="_blank" class="flex-centre"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://www.facebook.com/" target="_blank" class="flex-centre"><i
+                                    class="fab fa-facebook-f"></i></a>
                         </li>
                         <li class="list-item-social">
-                            <a href="http://" target="_blank" class="flex-centre"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://twitter.com/" target="_blank" class="flex-centre"><i
+                                    class="fab fa-twitter"></i></a>
                         </li>
                     </ul>
                 </div>
-                <!-- <ul class="social-links">
-                    <li><a class="social-links__link social-links__twitter" href="https://twitter.com/stjamesdublin" target="_blank">Twitter</a></li>
-                    <li><a class="social-links__link social-links__facebook" href="https://www.facebook.com/StJamessHospitalDublin" target="_blank">Facebook</a></li>
-                    <li><a class="social-links__link social-links__linkedin" href="https://www.linkedin.com/company/stjamesshospitaldublin" target="_blank">Linkedin</a>
-                    </li>
-                </ul> -->
             </div>
             <div class="col-sm-12 col-md-12 col-lg-12 footer__info">
                 <p><a href="https://www.tcd.ie/" target="_blank">Trinity College Dublin</a> is the academic partner of St James's Hospital</p>
                 <div class="logos">
-                    <img src="/media/trinity_Main_Logo.png" alt="Trinity College Dublin">
+                    <img src="static/images/logos/logo-tcd-alt.png" alt="Trinity College Dublin">
                     <img src="static/images/logos/logo-smoke-free.svg" alt="SJH Smoke-free campus logo">
-                    <img src="/media/SmartD8-Logo-Colour.png" class="logos__padding" alt="Smart D8">
+                    <img src="static/images/logos/logo-smart-d8.png" class="logos__padding" alt="Smart D8">
                 </div>
                 <ul class="footer__links-inline">
                     <li>©2021 St James's Hospital. All rights reserved.</li>
-                    <li><a href="/contactus/" class="" target="">Contact us</a></li>
-                    <li><a href="/aboutus/disclaimer/" class="" target="">Disclaimer</a></li>
-                    <li><a href="/aboutus/privacynotice/" class="" target="">Privacy notice</a></li>
-                    <li><a href="/aboutus/accessibility/" class="" target="">Accessibility</a></li>
+                    <li><a href="https://www.stjames.ie/contactus/" class="" target="">Contact us</a></li>
+                    <li><a href="https://www.stjames.ie/aboutus/disclaimer/" class="" target="">Disclaimer</a></li>
+                    <li><a href="https://www.stjames.ie/aboutus/privacynotice/" class="" target="">Privacy notice</a>
+                    </li>
+                    <li><a href="https://www.stjames.ie/aboutus/accessibility/" class="" target="">Accessibility</a>
+                    </li>
                 </ul>
             </div>
         </div>
