--- a/sandbox.html
+++ b/sandbox.html
@@ -1,10 +1,154 @@
-<main>
-    <div class="width-max">
-        <?php include("carousel.php") ?>
-        <?php include("twitter.php") ?>
-        <?php include("resources.php") ?>
-        <?php include("media.php") ?>
-        <?php include("slides.php") ?>
-        <?php include("lectures.php") ?>
+<header>
+    <nav class="c-navbar navbar navbar-expand-lg fixed-top">
+        <a class="navbar-brand" target="_blank" href="https://www.tcd.ie/medicine/histopathology/">
+            <div class="navbar-brand__main">
+                <img src="static/images/logos/site-logo-tcd.png" alt="SJH logo" class="navbar-brand-logo">
+            </div>
+        </a>
+        <ul class="nav nav-primary">
+            <li><a href="https://www.stjames.ie/">Home</a></li>
+            <li>
+                <a href="https://www.stjames.ie/aboutus/">About</a>
+                <ul>
+                    <li><a href="https://www.stjames.ie/aboutus/">About us</a></li>
+                    <li><a href="https://www.stjames.ie/aboutus/history/">Our history</a></li>
+                    <li><a href="https://www.stjames.ie/aboutus/executivemanagementgroup/">Executive Management
+                            Group</a></li>
+                    <li><a href="https://www.stjames.ie/aboutus/hospitalboard/">Hospital board</a></li>
+                    <li><a href="https://www.stjames.ie/aboutus/news/">Latest news</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="https://www.stjames.ie/services/">Services</a>
+                <ul>
+                    <li><a href="https://www.stjames.ie/services/">Find a service</a></li>
+                    <li><a href="https://www.stjames.ie/wards/">Find a ward</a></li>
+                    <li><a href="https://www.stjames.ie/research/">Research</a></li>
+                    <li><a href="https://www.stjames.ie/cancer/">Cancer Institute</a></li>
+                    <li><a href="https://www.stjames.ie/misa/">MISA</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="https://www.stjames.ie/patients/">Patients</a>
+                <ul>
+                    <li><a href="https://www.stjames.ie/patients/">Appointment information</a></li>
+                    <li><a href="https://www.stjames.ie/patients/visiting/">Visiting</a></li>
+                    <li><a href="https://www.stjames.ie/aboutus/gettingtothehospital/">Getting to the hospital</a></li>
+                    <li><a href="https://www.stjames.ie/patients/payyourbill/">Pay your bill</a></li>
+                    <li><a href="https://www.stjames.ie/patients/bloodtesting/">Blood testing</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="https://www.stjames.ie/healthcareprofessionals/">Healthcare Professionals</a>
+                <ul>
+                    <li><a href="https://www.stjames.ie/healthcareprofessionals/newslettersnews/">Newsletters</a></li>
+                    <li><a href="https://www.stjames.ie/services/laboratorymedicinelabmed/">LabMed Services</a></li>
+                    <li><a href="http://search.stjames.ie/Labmed/">LabMed UserGuide</a></li>
+                    <li><a href="https://www.stjames.ie/consultants/">Find a consultant</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="https://www.stjames.ie/careers/">Work With Us</a>
+                <ul>
+                    <li><a href="https://www.stjames.ie/careers/">Careers</a></li>
+                    <li><a href="https://www.stjames.ie/research/">Research</a></li>
+                </ul>
+            </li>
+        </ul>
+        <a class="navbar-brand" href="https://www.stjames.ie/">
+            <div class="navbar-brand__main">
+                <img src="static/images/logos/site-logo-sjh.svg" alt="SJH logo" class="navbar-brand-logo">
+            </div>
+        </a>
+        <div class="navbar-search">
+            <button class="dropdown-toggle" type="button" id="dropdown-toggler" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <h4 class="navbar-search-title">How can we help you?</h4>
+                <p class="navbar-search-para">Get directions, Find a consultant, Pay a bill...</p>
+                <div class="toggle-icons">
+                    <span class="search-icon-box flex-centre">
+                    <i class="dropdown-toggle-icon fas fa-search"></i>
+                </span>
+                    <span class="times-icon-box flex-centre">
+                    <i class="dropdown-toggle-icon fas fa-times"></i>
+                </span>
+                </div>
+            </button>
+            <div class="collapse dropdown-menu" aria-labelledby="navbar-search__toggle">
+                <ul class="dropdown-nav">
+                    <li><a class="dropdown-item " href="https://www.stjames.ie/aboutus/gettingtothehospital/" target=""><i class="fas fa-chevron-right"></i> Get directions</a></li>
+                    <li><a class="dropdown-item " href="https://www.stjames.ie/patients/" target=""><i
+                                class="fas fa-chevron-right"></i>
+                            Appointment information</a></li>
+                    <li><a class="dropdown-item " href="https://www.stjames.ie/consultants/" target=""><i
+                                class="fas fa-chevron-right"></i>
+                            Find a consultant</a></li>
+                    <li><a class="dropdown-item " href="https://www.supportstjames.ie/" target=""><i
+                                class="fas fa-chevron-right"></i> Make a donation</a></li>
+                    <li><a class="dropdown-item " href="https://www.stjames.ie/services/" target=""><i
+                                class="fas fa-chevron-right"></i> Find
+                            a department</a></li>
+                    <li><a class="dropdown-item " href="https://www.stjames.ie/careers/" target=""><i
+                                class="fas fa-chevron-right"></i> View
+                            job vacancies</a></li>
+                    <li><a class="dropdown-item " href="https://www.stjames.ie/patients/bloodtesting/" target=""><i
+                                class="fas fa-chevron-right"></i> Book a blood test</a></li>
+                    <li><a class="dropdown-item " href="https://www.stjames.ie/patients/payyourbill/" target=""><i
+                                class="fas fa-chevron-right"></i> Pay a bill</a></li>
+                </ul>
+                <form class="form form--search" method="get" action="https://www.google.com/cse">
+                    <div class="form-group">
+                        <label for="input-search" class="sr-only">Search</label>
+                        <input type="text" name="q" class="form-control" id="input-search" autocomplete="off" placeholder="Enter your search">
+                        <i class="fas fa-search"></i>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </nav>
+    <div class="banner"></div>
+    <h1>Pathology Training Hub</h1>
+    <div class="header-sub">
+        <ol class='nav nav-breadcrumbs'>
+            <li class='breadcrumb'>
+                <a href="https://www.stjames.ie/">Home</a>
+            </li>
+            <li class='breadcrumb'>
+                <a href="https://www.stjames.ie/services/">Services</a>
+            </li>
+            <li class='breadcrumb'>
+                <a href="https://www.stjames.ie/services/laboratorymedicinelabmed/">Laboratory Medicine (LabMed)</a>
+            </li>
+            <li class='breadcrumb'>
+                <a href="https://www.stjames.ie/services/laboratorymedicinelabmed/histopathologyandcytopathology/">Histopathology
+                    and Cytopathology</a>
+            </li>
+            <li class='breadcrumb'>
+                <a href="http://loosenthedark.tech/sjh-pathology-training-hub/">Pathology Training Hub</a>
+            </li>
+        </ol>
+        <div class="container">
+            <h5>Share</h5>
+            <ul class='nav nav-social'>
+                <li class='list-item-social'>
+                    <a href="https://www.linkedin.com/" target="_blank" class='flex-centre'><i
+                            class="fab fa-linkedin-in"></i></a>
+                </li>
+                <li class='list-item-social'>
+                    <a href="https://www.facebook.com/" target="_blank" class='flex-centre'><i
+                            class="fab fa-facebook-f"></i></a>
+                </li>
+                <li class='list-item-social'>
+                    <a href="https://twitter.com/" target="_blank" class='flex-centre'><i
+                            class="fab fa-twitter"></i></a>
+                </li>
+            </ul>
+            <h5>Print</h5>
+            <ul class='nav nav-print'>
+                <li class='list-item-print'>
+                    <a href="http://" target="_blank" class='flex-centre'><i class="fas fa-print"></i></i></a>
+                </li>
+            </ul>
+        </div>
+        </ul>
     </div>
-</main>
+</header>
