--- a/sandbox.html
+++ b/sandbox.html
@@ -1,154 +1,118 @@
-<header>
-    <nav class="c-navbar navbar navbar-expand-lg fixed-top">
-        <a class="navbar-brand" target="_blank" href="https://www.tcd.ie/medicine/histopathology/">
-            <div class="navbar-brand__main">
-                <img src="static/images/logos/site-logo-tcd.png" alt="SJH logo" class="navbar-brand-logo">
-            </div>
-        </a>
-        <ul class="nav nav-primary">
-            <li><a href="https://www.stjames.ie/">Home</a></li>
-            <li>
-                <a href="https://www.stjames.ie/aboutus/">About</a>
-                <ul>
-                    <li><a href="https://www.stjames.ie/aboutus/">About us</a></li>
-                    <li><a href="https://www.stjames.ie/aboutus/history/">Our history</a></li>
-                    <li><a href="https://www.stjames.ie/aboutus/executivemanagementgroup/">Executive Management
-                            Group</a></li>
-                    <li><a href="https://www.stjames.ie/aboutus/hospitalboard/">Hospital board</a></li>
-                    <li><a href="https://www.stjames.ie/aboutus/news/">Latest news</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="https://www.stjames.ie/services/">Services</a>
-                <ul>
-                    <li><a href="https://www.stjames.ie/services/">Find a service</a></li>
-                    <li><a href="https://www.stjames.ie/wards/">Find a ward</a></li>
-                    <li><a href="https://www.stjames.ie/research/">Research</a></li>
-                    <li><a href="https://www.stjames.ie/cancer/">Cancer Institute</a></li>
-                    <li><a href="https://www.stjames.ie/misa/">MISA</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="https://www.stjames.ie/patients/">Patients</a>
-                <ul>
-                    <li><a href="https://www.stjames.ie/patients/">Appointment information</a></li>
-                    <li><a href="https://www.stjames.ie/patients/visiting/">Visiting</a></li>
-                    <li><a href="https://www.stjames.ie/aboutus/gettingtothehospital/">Getting to the hospital</a></li>
-                    <li><a href="https://www.stjames.ie/patients/payyourbill/">Pay your bill</a></li>
-                    <li><a href="https://www.stjames.ie/patients/bloodtesting/">Blood testing</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="https://www.stjames.ie/healthcareprofessionals/">Healthcare Professionals</a>
-                <ul>
-                    <li><a href="https://www.stjames.ie/healthcareprofessionals/newslettersnews/">Newsletters</a></li>
-                    <li><a href="https://www.stjames.ie/services/laboratorymedicinelabmed/">LabMed Services</a></li>
-                    <li><a href="http://search.stjames.ie/Labmed/">LabMed UserGuide</a></li>
-                    <li><a href="https://www.stjames.ie/consultants/">Find a consultant</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="https://www.stjames.ie/careers/">Work With Us</a>
-                <ul>
-                    <li><a href="https://www.stjames.ie/careers/">Careers</a></li>
-                    <li><a href="https://www.stjames.ie/research/">Research</a></li>
-                </ul>
-            </li>
-        </ul>
-        <a class="navbar-brand" href="https://www.stjames.ie/">
-            <div class="navbar-brand__main">
-                <img src="static/images/logos/site-logo-sjh.svg" alt="SJH logo" class="navbar-brand-logo">
-            </div>
-        </a>
-        <div class="navbar-search">
-            <button class="dropdown-toggle" type="button" id="dropdown-toggler" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <h4 class="navbar-search-title">How can we help you?</h4>
-                <p class="navbar-search-para">Get directions, Find a consultant, Pay a bill...</p>
-                <div class="toggle-icons">
-                    <span class="search-icon-box flex-centre">
-                    <i class="dropdown-toggle-icon fas fa-search"></i>
-                </span>
-                    <span class="times-icon-box flex-centre">
-                    <i class="dropdown-toggle-icon fas fa-times"></i>
-                </span>
+<footer class="component footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+                <h3 class="heading heading--s">
+                    Useful Links
+                </h3>
+                <div class="collapse" id="collapse-footer-1">
+                    <ul class="footer__links">
+                        <li><a href="https://www.supportstjames.ie/">Make a donation</a></li>
+                        <li><a href="https://www.stjames.ie/patients/payyourbill/">Pay your bill</a></li>
+                        <li><a href="https://www.stjames.ie/covid19/">COVID-19</a></li>
+                        <li><a href="https://www.stjames.ie/aboutus/news/">Latest news</a></li>
+                    </ul>
                 </div>
-            </button>
-            <div class="collapse dropdown-menu" aria-labelledby="navbar-search__toggle">
-                <ul class="dropdown-nav">
-                    <li><a class="dropdown-item " href="https://www.stjames.ie/aboutus/gettingtothehospital/" target=""><i class="fas fa-chevron-right"></i> Get directions</a></li>
-                    <li><a class="dropdown-item " href="https://www.stjames.ie/patients/" target=""><i
-                                class="fas fa-chevron-right"></i>
-                            Appointment information</a></li>
-                    <li><a class="dropdown-item " href="https://www.stjames.ie/consultants/" target=""><i
-                                class="fas fa-chevron-right"></i>
-                            Find a consultant</a></li>
-                    <li><a class="dropdown-item " href="https://www.supportstjames.ie/" target=""><i
-                                class="fas fa-chevron-right"></i> Make a donation</a></li>
-                    <li><a class="dropdown-item " href="https://www.stjames.ie/services/" target=""><i
-                                class="fas fa-chevron-right"></i> Find
-                            a department</a></li>
-                    <li><a class="dropdown-item " href="https://www.stjames.ie/careers/" target=""><i
-                                class="fas fa-chevron-right"></i> View
-                            job vacancies</a></li>
-                    <li><a class="dropdown-item " href="https://www.stjames.ie/patients/bloodtesting/" target=""><i
-                                class="fas fa-chevron-right"></i> Book a blood test</a></li>
-                    <li><a class="dropdown-item " href="https://www.stjames.ie/patients/payyourbill/" target=""><i
-                                class="fas fa-chevron-right"></i> Pay a bill</a></li>
-                </ul>
-                <form class="form form--search" method="get" action="https://www.google.com/cse">
-                    <div class="form-group">
-                        <label for="input-search" class="sr-only">Search</label>
-                        <input type="text" name="q" class="form-control" id="input-search" autocomplete="off" placeholder="Enter your search">
-                        <i class="fas fa-search"></i>
-                    </div>
-                </form>
+            </div>
+            <div class="col-md-3">
+                <h3 class="heading heading--s">
+                    Patients
+                </h3>
+                <div class="collapse" id="collapse-footer-2">
+                    <ul class="footer__links">
+                        <li><a href="https://www.stjames.ie/patients/bloodtesting/">Blood Testing</a></li>
+                        <li><a href="https://www.stjames.ie/aboutus/gettingtothehospital/">Getting to the hospital</a>
+                        </li>
+                        <li><a href="https://www.stjames.ie/patients/parking/">Parking</a></li>
+                        <li><a href="https://www.stjames.ie/patients/">Appointment information</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <h3 class="heading heading--s">
+                    Visitors
+                </h3>
+                <div class="collapse" id="collapse-footer-3">
+                    <ul class="footer__links">
+                        <li><a href="https://www.stjames.ie/patients/visiting/">Visiting</a></li>
+                        <li><a href="https://www.stjames.ie/wards/">Wards</a></li>
+                        <li><a href="https://www.stjames.ie/patients/shopsfacilities/">Shops &amp;&nbsp;Facilites</a>
+                        </li>
+                        <li><a href="https://www.stjames.ie/services/">Departments</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <h3 class="heading heading--s">
+                    Healthcare Professionals
+                </h3>
+                <div class="collapse" id="collapse-footer-4">
+                    <ul class="footer__links">
+                        <li><a href="https://www.stjames.ie/research/">Research</a></li>
+                        <li><a href="http://search.stjames.ie/Labmed/">LabMed User Guide</a></li>
+                        <li><a href="https://www.stjames.ie/services/laboratorymedicinelabmed/">LabMed Services</a></li>
+                        <li><a href="https://www.stjames.ie/healthcareprofessionals/newslettersnews/">Newsletters</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </nav>
-    <div class="banner"></div>
-    <h1>Pathology Training Hub</h1>
-    <div class="header-sub">
-        <ol class='nav nav-breadcrumbs'>
-            <li class='breadcrumb'>
-                <a href="https://www.stjames.ie/">Home</a>
-            </li>
-            <li class='breadcrumb'>
-                <a href="https://www.stjames.ie/services/">Services</a>
-            </li>
-            <li class='breadcrumb'>
-                <a href="https://www.stjames.ie/services/laboratorymedicinelabmed/">Laboratory Medicine (LabMed)</a>
-            </li>
-            <li class='breadcrumb'>
-                <a href="https://www.stjames.ie/services/laboratorymedicinelabmed/histopathologyandcytopathology/">Histopathology
-                    and Cytopathology</a>
-            </li>
-            <li class='breadcrumb'>
-                <a href="http://loosenthedark.tech/sjh-pathology-training-hub/">Pathology Training Hub</a>
-            </li>
-        </ol>
-        <div class="container">
-            <h5>Share</h5>
-            <ul class='nav nav-social'>
-                <li class='list-item-social'>
-                    <a href="https://www.linkedin.com/" target="_blank" class='flex-centre'><i
-                            class="fab fa-linkedin-in"></i></a>
-                </li>
-                <li class='list-item-social'>
-                    <a href="https://www.facebook.com/" target="_blank" class='flex-centre'><i
-                            class="fab fa-facebook-f"></i></a>
-                </li>
-                <li class='list-item-social'>
-                    <a href="https://twitter.com/" target="_blank" class='flex-centre'><i
-                            class="fab fa-twitter"></i></a>
-                </li>
-            </ul>
-            <h5>Print</h5>
-            <ul class='nav nav-print'>
-                <li class='list-item-print'>
-                    <a href="http://" target="_blank" class='flex-centre'><i class="fas fa-print"></i></i></a>
-                </li>
-            </ul>
+        <div class="row footer__bottom">
+            <div class="col-sm-6 col-md-6 col-lg-3">
+                <p><strong>St James's Hospital</strong><br>James Street<br>Dublin 8<br>Ireland&nbsp;<br>D08 NHY1</p>
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <ul class="contact-info footer__links">
+                    <li><a href="tel:+35314103000" class="contact-info__link contact-info__phone"><span>Phone</span>&nbsp;(01) 410
+                            3000</a><br><br></li>
+                    <li>Registered Charity Number: 20017583</li>
+                </ul>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-3 footer__social">
+                <div class="container">
+                    <ul class="nav nav-social">
+                        <li class="list-item-social">
+                            <a href="https://www.linkedin.com/" target="_blank" class="flex-centre"><i
+                                    class="fab fa-linkedin-in"></i></a>
+                        </li>
+                        <li class="list-item-social">
+                            <a href="https://www.facebook.com/" target="_blank" class="flex-centre"><i
+                                    class="fab fa-facebook-f"></i></a>
+                        </li>
+                        <li class="list-item-social">
+                            <a href="https://twitter.com/" target="_blank" class="flex-centre"><i
+                                    class="fab fa-twitter"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-12 footer__info">
+                <p><a href="https://www.tcd.ie/" target="_blank">Trinity College Dublin</a> is the academic partner of St James's Hospital</p>
+                <div class="logos">
+                    <img src="static/images/logos/logo-tcd-alt.png" alt="Trinity College Dublin">
+                    <img src="static/images/logos/logo-smoke-free.svg" alt="SJH Smoke-free campus logo">
+                    <img src="static/images/logos/logo-smart-d8.png" class="logos__padding" alt="Smart D8">
+                </div>
+                <ul class="footer__links-inline">
+                    <li>©2021 St James's Hospital. All rights reserved.</li>
+                    <li><a href="https://www.stjames.ie/contactus/" class="" target="">Contact us</a></li>
+                    <li><a href="https://www.stjames.ie/aboutus/disclaimer/" class="" target="">Disclaimer</a></li>
+                    <li><a href="https://www.stjames.ie/aboutus/privacynotice/" class="" target="">Privacy notice</a>
+                    </li>
+                    <li><a href="https://www.stjames.ie/aboutus/accessibility/" class="" target="">Accessibility</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        </ul>
     </div>
-</header>
+    <div class="attribution">
+        <p>
+            <i class="far fa-copyright" aria-hidden="true"></i> Brew Barberista 2021
+        </p>
+        <p>Built with
+            <i class="fas fa-heart" aria-hidden="true"></i> and
+            <i class="fas fa-mug-hot" aria-hidden="true"></i> by
+            <a href="https://www.loosenthedark.tech" target="_blank" class="ltd">loosenthedark</a>
+        </p>
+    </div>
+</footer>
