Add Appcues script to head to enable onboarding functionality

--- a/sandbox.html
+++ b/sandbox.html
@@ -107,7 +107,7 @@
     </div>
     <div class="attribution">
         <p>
-            <i class="far fa-copyright" aria-hidden="true"></i> Brew Barberista 2021
+            <a href="https://www.ecowebhosting.co.uk/green-credentials" alt="Planting trees every month with Eco Web Hosting" target="_blank" rel="noopener"><img class="d-block mx-auto mt-1 mb-4" width="140" src="https://eco-cdn.co.uk/eco-badge-2.svg" alt="Planting trees every month with Eco Web Hosting"></a>
         </p>
         <p>Built with
             <i class="fas fa-heart" aria-hidden="true"></i> and
